[gd_scene load_steps=27 format=3 uid="uid://bhmd872c4jq0t"]

[ext_resource type="Shader" path="res://main_screen_button.gdshader" id="1_qbh2h"]
[ext_resource type="Shader" path="res://dark_grey.gdshader" id="1_vhf38"]
[ext_resource type="PackedScene" uid="uid://d1nup2woc53yn" path="res://TextureButton_main_scene.tscn" id="2_r8ku8"]
[ext_resource type="Texture2D" uid="uid://d3hsf1jqfh5uy" path="res://textures/arrow_default.png" id="3_mj77k"]
[ext_resource type="Texture2D" uid="uid://cq52fmwnc44at" path="res://textures/blue_arrow.png" id="4_7agaj"]
[ext_resource type="Texture2D" uid="uid://ixygv1sruy6u" path="res://textures/select_color.png" id="5_5c85u"]
[ext_resource type="Shader" path="res://PlayerColor.gdshader" id="6_8ftff"]
[ext_resource type="Texture2D" uid="uid://2ut8dcjcpo3o" path="res://textures/colors/chosen_color.png" id="7_0t54w"]
[ext_resource type="Script" path="res://chosen_color.gd" id="8_vxyw2"]
[ext_resource type="Texture2D" uid="uid://dud63bf6b5qdf" path="res://textures/okay.png" id="9_k5gmp"]
[ext_resource type="Texture2D" uid="uid://duhh418m87w3e" path="res://textures/okay_hover.png" id="10_xxy3w"]
[ext_resource type="Shader" path="res://ok_button.gdshader" id="11_lp8jh"]
[ext_resource type="Script" path="res://Label.gd" id="12_3htlp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvik5"]
resource_local_to_scene = true
shader = ExtResource("1_qbh2h")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d4ghr"]
shader = ExtResource("1_vhf38")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wl4ag"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m16l0"]
resource_local_to_scene = true
shader = ExtResource("6_8ftff")
shader_parameter/color = Quaternion(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4s42x"]
resource_local_to_scene = true
shader = ExtResource("6_8ftff")
shader_parameter/color = Quaternion(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vf5wh"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_llntb"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j74lf"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m8v5l"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_srwq0"]
resource_local_to_scene = true
shader = ExtResource("6_8ftff")
shader_parameter/color = Quaternion(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e2wh"]
resource_local_to_scene = true
shader = ExtResource("6_8ftff")
shader_parameter/color = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qxqai"]
resource_local_to_scene = true
shader = ExtResource("1_qbh2h")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jga75"]
shader = ExtResource("11_lp8jh")

[node name="color_4" type="Control"]
material = SubResource("ShaderMaterial_hvik5")
layout_mode = 3
anchors_preset = 0
offset_right = 904.0
offset_bottom = 736.0

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_d4ghr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_wl4ag")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 904.0
offset_bottom = 736.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="back_button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer" instance=ExtResource("2_r8ku8")]
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
texture_focused = ExtResource("4_7agaj")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("5_5c85u")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 140
theme_override_constants/v_separation = 50
columns = 2

[node name="chosen_color1" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
material = SubResource("ShaderMaterial_m16l0")
layout_mode = 2
texture = ExtResource("7_0t54w")
stretch_mode = 3
script = ExtResource("8_vxyw2")

[node name="chosen_color2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
material = SubResource("ShaderMaterial_4s42x")
layout_mode = 2
texture = ExtResource("7_0t54w")
stretch_mode = 3
script = ExtResource("8_vxyw2")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="a1l" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_vf5wh")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
stretch_mode = 3

[node name="a1r" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_llntb")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
flip_h = true

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="a2l" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer2" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_j74lf")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
stretch_mode = 3

[node name="a2r" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer2" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_m8v5l")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
flip_h = true

[node name="chosen_color3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
material = SubResource("ShaderMaterial_srwq0")
layout_mode = 2
texture = ExtResource("7_0t54w")
stretch_mode = 3
script = ExtResource("8_vxyw2")

[node name="chosen_color4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
material = SubResource("ShaderMaterial_6e2wh")
layout_mode = 2
texture = ExtResource("7_0t54w")
stretch_mode = 3
script = ExtResource("8_vxyw2")

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="a3l" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer3" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_j74lf")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
stretch_mode = 3

[node name="a3r" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer3" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_m8v5l")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
flip_h = true

[node name="GridContainer4" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="a4l" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer4" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_j74lf")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
stretch_mode = 3

[node name="a4r" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/GridContainer4" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_m8v5l")
layout_mode = 2
texture_normal = ExtResource("3_mj77k")
texture_hover = ExtResource("4_7agaj")
flip_h = true

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer3/CenterContainer"]
layout_mode = 2
theme_override_constants/v_separation = 0

[node name="ok4" parent="MarginContainer/VBoxContainer/MarginContainer3/CenterContainer/GridContainer" instance=ExtResource("2_r8ku8")]
material = SubResource("ShaderMaterial_qxqai")
layout_mode = 2
keep_pressed_outside = true
texture_normal = ExtResource("9_k5gmp")
texture_hover = ExtResource("10_xxy3w")
texture_focused = ExtResource("10_xxy3w")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/CenterContainer/GridContainer/ok4"]
material = SubResource("ShaderMaterial_jga75")
layout_mode = 2
offset_top = 49.0
offset_right = 200.0
offset_bottom = 75.0
text = "      equal colors found!"
script = ExtResource("12_3htlp")
